javascript/jonas/17-JS-Modules/starter/log.txt
/Users/sugiyama/github/study/javascript/jonas/17-JS-Modules/starter/node_modules/@parcel/core/lib/Parcel.js:150
  #requestTracker
  ^

SyntaxError: Invalid or unexpected token
    at new Script (vm.js:79:7)
    at NativeCompileCache._moduleCompile (/Users/sugiyama/github/study/javascript/jonas/17-JS-Modules/starter/node_modules/v8-compile-cache/v8-compile-cache.js:240:18)
    at Module._compile (/Users/sugiyama/github/study/javascript/jonas/17-JS-Modules/starter/node_modules/v8-compile-cache/v8-compile-cache.js:184:36)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:700:10)
    at Module.load (internal/modules/cjs/loader.js:599:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:538:12)
    at Function.Module._load (internal/modules/cjs/loader.js:530:3)
    at Module.require (internal/modules/cjs/loader.js:637:17)
    at require (/Users/sugiyama/github/study/javascript/jonas/17-JS-Modules/starter/node_modules/v8-compile-cache/v8-compile-cache.js:159:20)
    at Object.<anonymous> (/Users/sugiyama/github/study/javascript/jonas/17-JS-Modules/starter/node_modules/@parcel/core/lib/index.js:81:39)
/Users/sugiyama/github/study/javascript/jonas/17-JS-Modules/starter/node_modules/@parcel/logger/lib/Logger.js:41
  #logEmitter
  ^

SyntaxError: Invalid or unexpected token
    at new Script (vm.js:79:7)
    at NativeCompileCache._moduleCompile (/Users/sugiyama/github/study/javascript/jonas/17-JS-Modules/starter/node_modules/v8-compile-cache/v8-compile-cache.js:240:18)
    at Module._compile (/Users/sugiyama/github/study/javascript/jonas/17-JS-Modules/starter/node_modules/v8-compile-cache/v8-compile-cache.js:184:36)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:700:10)
    at Module.load (internal/modules/cjs/loader.js:599:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:538:12)
    at Function.Module._load (internal/modules/cjs/loader.js:530:3)
    at Module.require (internal/modules/cjs/loader.js:637:17)
    at require (internal/modules/cjs/helpers.js:22:18)
    at _logger (/Users/sugiyama/github/study/javascript/jonas/17-JS-Modules/starter/node_modules/parcel/lib/cli.js:54:16)
